added ejs-mate for layouts

--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Review</title>
-</head>
-
-<body>
+<% layout('layouts/boilerplate') %>
     <h1>Edit Review</h1>
     <form action="/reviews/<%= review._id %>?_method=PUT " method="POST">
         <div>
@@ -22,6 +12,3 @@
         <button>Update Review</button>
     </form>
     <a href="/reviews/<%= review._id %> ">Back to Reviews</a>
-</body>
-
-</html>
