--- a/views/reviews/index.ejs
+++ b/views/reviews/index.ejs
@@ -1,25 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reviews</title>
-</head>
-
-<body>
-    <h1>All reviews</h1>
-    <div>
-        <a href="/reviews/new">Add Review</a>
-    </div>
-    <ul>
-        <% for (let review of reviews) {%>
-            <li><a href="/reviews/<%= review._id %> ">
-                    <%= review.title %>
-                </a></li>
-            <% }%>
-    </ul>
-</body>
-
-</html>
+<% layout('layouts/boilerplate') %>
+<h1>All reviews</h1>
+<div>
+    <a href="/reviews/new">Add Review</a>
+</div>
+<ul>
+    <% for (let review of reviews) { %>
+        <li><a href="/reviews/<%= review._id %> ">
+                <%= review.title %>
+            </a></li>
+        <% } %>
+</ul>
