--- a/views/reviews/new.ejs
+++ b/views/reviews/new.ejs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Review</title>
-</head>
-
-<body>
+<% layout('layouts/boilerplate') %>
     <form action="/reviews" method="POST">
         <div>
             <label for="title">Title</label>
@@ -21,6 +11,3 @@
         <button>Add Review</button>
     </form>
     <a href="/reviews">All Reviews</a>
-</body>
-
-</html>
