--- a/views/reviews/new.ejs
+++ b/views/reviews/new.ejs
@@ -1,13 +1,28 @@
 <% layout('layouts/boilerplate') %>
-    <form action="/reviews" method="POST">
-        <div>
-            <label for="title">Title</label>
-            <input type="text" id="title" name="review[title]">
+    <div class="row">
+        <h1 class="text-center">New Review</h1>
+        <div class="col-6 offset-3">
+            <form action="/reviews" method="POST">
+                <div class="mb-3">
+                    <label class="form-label" for="title">Title</label>
+                    <input class="form-control" type="text" id="title" name="review[title]">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="location">Location</label>
+                    <input class="form-control" type="text" id="location" name="review[location]">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="image">Image Url</label>
+                    <input class="form-control" type="text" id="image" name="review[image]">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="description">Description</label>
+                    <textarea class="form-control" type="text" id="description" name="review[description]"></textarea>
+                </div>
+                <div class="mb-3">
+                    <button class="btn btn-success">Add Review</button>
+                </div>
+            </form>
+            <a href="/reviews">All Reviews</a>
         </div>
-        <div>
-            <label for="location">Location</label>
-            <input type="text" id="location" name="review[location]">
-        </div>
-        <button>Add Review</button>
-    </form>
-    <a href="/reviews">All Reviews</a>
+    </div>
