--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -1,14 +1,30 @@
 <% layout('layouts/boilerplate') %>
-    <h1>Edit Review</h1>
-    <form action="/reviews/<%= review._id %>?_method=PUT " method="POST">
-        <div>
-            <label for="title">Title</label>
-            <input type="text" id="title" name="review[title]" value="<%= review.title %> ">
+    <div class="row">
+        <h1 class="text-center">Edit Review</h1>
+        <div class="col-6 offset-3">
+            <form action="/reviews/<%= review._id %>?_method=PUT " method="POST">
+                <div class="mb-3">
+                    <label class="form-label" for="title">Title</label>
+                    <input class="form-control" type="text" id="title" name="review[title]" value="<%= review.title %>">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="location">Location</label>
+                    <input class="form-control" type="text" id="location" name="review[location]"
+                        value="<%= review.location %>">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="image">Image Url</label>
+                    <input class="form-control" type="text" id="image" name="review[image]" value="<%= review.image %>">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="description">Description</label>
+                    <textarea class="form-control" type="text" id="description"
+                        name="review[description]"><%= review.description %> </textarea>
+                </div>
+                <div class="mb-3">
+                    <button class="btn btn-info">Update Review</button>
+                </div>
+            </form>
+            <a href="/reviews/<%= review._id %> ">Back to Reviews</a>
         </div>
-        <div>
-            <label for="location">Location</label>
-            <input type="text" id="location" name="review[location]" value="<%= review.location %> ">
-        </div>
-        <button>Update Review</button>
-    </form>
-    <a href="/reviews/<%= review._id %> ">Back to Reviews</a>
+    </div>
