--- a/views/reviews/new.ejs
+++ b/views/reviews/new.ejs
@@ -2,23 +2,36 @@
     <div class="row">
         <h1 class="text-center">New Review</h1>
         <div class="col-6 offset-3">
-            <form action="/reviews" method="POST">
+            <form action="/reviews" method="POST" novalidate class="validated-form">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
-                    <input class="form-control" type="text" id="title" name="review[title]">
+                    <input class="form-control" type="text" id="title" name="review[title]" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="location">Location</label>
-                    <input class="form-control" type="text" id="location" name="review[location]">
+                    <input class="form-control" type="text" id="location" name="review[location]" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="image">Image Url</label>
-                    <input class="form-control" type="text" id="image" name="review[image]">
+                    <input class="form-control" type="text" id="image" name="review[image]" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
-                    <textarea class="form-control" type="text" id="description" name="review[description]"></textarea>
-                </div>
+                    <textarea class="form-control" type="text" id="description" name="review[description]"
+                        required></textarea>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                    </div>
                 <div class="mb-3">
                     <button class="btn btn-success">Add Review</button>
                 </div>
