--- a/views/reviews/show.ejs
+++ b/views/reviews/show.ejs
@@ -21,5 +21,17 @@
                 2 days ago
             </div>
         </div>
+        <h2>Leave a Comment</h2>
+        <form action="" class="mb-3">
+            <div class="mb-3">
+                <label class="form-label" for="rating">Rating</label>
+                <input class="form-range" type="range" min="1" max="5" name="comment[rating]" id="rating">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="body">Comment</label>
+                <textarea class="form-control" name="comment[body]" id="body" cols="30" rows="3"></textarea>
+            </div>
+            <button class="btn btn-success">Submit</button>
+        </form>
     </div>
 </div>
