--- a/views/reviews/show.ejs
+++ b/views/reviews/show.ejs
@@ -22,7 +22,7 @@
             </div>
         </div>
         <h2>Leave a Comment</h2>
-        <form action="" class="mb-3">
+        <form action="/reviews/<%= review._id %>/comments" method="POST" class="mb-3">
             <div class="mb-3">
                 <label class="form-label" for="rating">Rating</label>
                 <input class="form-range" type="range" min="1" max="5" name="comment[rating]" id="rating">
