--- a/views/reviews/show.ejs
+++ b/views/reviews/show.ejs
@@ -1,37 +1,47 @@
 <% layout('layouts/boilerplate') %>
 
-<div class="row">
-    <div class="col-6 offset-3">
-        <div class="card mb-3" style="width: 18rem;">
-            <img src="<%= review.image %>" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title"><%= review.title %></h5>
-                <p class="card-text"><%= review.description %></p>
+    <div class="row">
+        <div class="col-6 offset-3">
+            <div class="card mb-3" style="width: 18rem;">
+                <img src="<%= review.image %>" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <%= review.title %>
+                    </h5>
+                    <p class="card-text">
+                        <%= review.description %>
+                    </p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item text-muted">
+                        <%= review.location %>
+                    </li>
+                </ul>
+                <div class="card-body">
+                    <a class="card-link btn btn-info" href="/reviews/<%= review._id %>/edit ">Edit</a>
+                    <form class="d-inline" action="/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                        <button class="btn btn-danger">Delete</button>
+                    </form>
+                </div>
+                <div class="card-footer text-muted">
+                    2 days ago
+                </div>
             </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item text-muted"><%= review.location %></li>
-            </ul>
-            <div class="card-body">
-                <a class="card-link btn btn-info" href="/reviews/<%= review._id %>/edit ">Edit</a>
-                <form class="d-inline" action="/reviews/<%= review._id %>?_method=DELETE" method="POST">
-                    <button class="btn btn-danger">Delete</button>
-                </form>
-            </div>
-            <div class="card-footer text-muted">
-                2 days ago
-            </div>
+            <h2>Leave a Comment</h2>
+            <form action="/reviews/<%= review._id %>/comments" method="POST" class="mb-3 validated-form" novalidate>
+                <div class="mb-3">
+                    <label class="form-label" for="rating">Rating</label>
+                    <input class="form-range" type="range" min="1" max="5" name="comment[rating]" id="rating">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="body">Comment</label>
+                    <textarea class="form-control" name="comment[body]" id="body" cols="30" rows="3"
+                        required></textarea>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div>
+                <button class="btn btn-success">Submit</button>
+            </form>
         </div>
-        <h2>Leave a Comment</h2>
-        <form action="/reviews/<%= review._id %>/comments" method="POST" class="mb-3">
-            <div class="mb-3">
-                <label class="form-label" for="rating">Rating</label>
-                <input class="form-range" type="range" min="1" max="5" name="comment[rating]" id="rating">
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="body">Comment</label>
-                <textarea class="form-control" name="comment[body]" id="body" cols="30" rows="3"></textarea>
-            </div>
-            <button class="btn btn-success">Submit</button>
-        </form>
     </div>
-</div>
