--- a/views/reviews/show.ejs
+++ b/views/reviews/show.ejs
@@ -43,5 +43,11 @@
                 </div>
                 <button class="btn btn-success">Submit</button>
             </form>
+            <% for(let comment of review.comments) { %> 
+            <div class="mb-3">
+                <p>Rating: <%= comment.rating %></p>
+                <p>Comment: <%= comment.body %> </p>
+            </div>
+            <% } %> 
         </div>
     </div>
