--- a/views/reviews/show.ejs
+++ b/views/reviews/show.ejs
@@ -1,8 +1,8 @@
 <% layout('layouts/boilerplate') %>
 
     <div class="row">
-        <div class="col-6 offset-3">
-            <div class="card mb-3" style="width: 18rem;">
+        <div class="col-6">
+            <div class="card mb-3" style="width: 24rem;">
                 <img src="<%= review.image %>" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
@@ -27,6 +27,8 @@
                     2 days ago
                 </div>
             </div>
+        </div>
+        <div class="col-6">
             <h2>Leave a Comment</h2>
             <form action="/reviews/<%= review._id %>/comments" method="POST" class="mb-3 validated-form" novalidate>
                 <div class="mb-3">
@@ -35,19 +37,22 @@
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="body">Comment</label>
-                    <textarea class="form-control" name="comment[body]" id="body" cols="30" rows="3"
-                        required></textarea>
+                    <textarea class="form-control" name="comment[body]" id="body" cols="30" rows="3" required></textarea>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
                 </div>
                 <button class="btn btn-success">Submit</button>
             </form>
-            <% for(let comment of review.comments) { %> 
-            <div class="mb-3">
-                <p>Rating: <%= comment.rating %></p>
-                <p>Comment: <%= comment.body %> </p>
-            </div>
-            <% } %> 
+            <% for(let comment of review.comments) { %>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title">Rating: <%= comment.rating %>
+                        </h5>
+                        <p class="card-text">Comment: <%= comment.body %>
+                        </p>
+                    </div>
+                </div>
+                <% } %>
         </div>
     </div>
