--- a/views/reviews/show.ejs
+++ b/views/reviews/show.ejs
@@ -16,6 +16,9 @@
                     <li class="list-group-item text-muted">
                         <%= review.location %>
                     </li>
+                    <li class="list-group-item">Submitted by 
+                        <%= review.author.username %>
+                    </li>
                 </ul>
                 <div class="card-body">
                     <a class="card-link btn btn-info" href="/reviews/<%= review._id %>/edit ">Edit</a>
