--- a/views/reviews/show.ejs
+++ b/views/reviews/show.ejs
@@ -34,35 +34,37 @@
             </div>
         </div>
         <div class="col-6">
-            <h2>Leave a Comment</h2>
-            <form action="/reviews/<%= review._id %>/comments" method="POST" class="mb-3 validated-form" novalidate>
-                <div class="mb-3">
-                    <label class="form-label" for="rating">Rating</label>
-                    <input class="form-range" type="range" min="1" max="5" name="comment[rating]" id="rating">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="body">Comment</label>
-                    <textarea class="form-control" name="comment[body]" id="body" cols="30" rows="3"
-                        required></textarea>
-                    <div class="valid-feedback">
-                        Looks good!
+            <% if(currentUser) { %>
+                <h2>Leave a Comment</h2>
+                <form action="/reviews/<%= review._id %>/comments" method="POST" class="mb-3 validated-form" novalidate>
+                    <div class="mb-3">
+                        <label class="form-label" for="rating">Rating</label>
+                        <input class="form-range" type="range" min="1" max="5" name="comment[rating]" id="rating">
                     </div>
-                </div>
-                <button class="btn btn-success">Submit</button>
-            </form>
-            <% for(let comment of review.comments) { %>
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">Rating: <%= comment.rating %>
-                        </h5>
-                        <p class="card-text">Comment: <%= comment.body %>
-                        </p>
-                        <form action="/reviews/<%= review._id %>/comments/<%= comment._id %>?_method=DELETE"
-                            method="POST">
-                            <button class="btn btn-sm btn-danger">Delete</button>
-                        </form>
+                    <div class="mb-3">
+                        <label class="form-label" for="body">Comment</label>
+                        <textarea class="form-control" name="comment[body]" id="body" cols="30" rows="3"
+                            required></textarea>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
                     </div>
-                </div>
+                    <button class="btn btn-success">Submit</button>
+                </form>
                 <% } %>
+                    <% for(let comment of review.comments) { %>
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <h5 class="card-title">Rating: <%= comment.rating %>
+                                </h5>
+                                <p class="card-text">Comment: <%= comment.body %>
+                                </p>
+                                <form action="/reviews/<%= review._id %>/comments/<%= comment._id %>?_method=DELETE"
+                                    method="POST">
+                                    <button class="btn btn-sm btn-danger">Delete</button>
+                                </form>
+                            </div>
+                        </div>
+                        <% } %>
         </div>
     </div>
