--- a/views/reviews/show.ejs
+++ b/views/reviews/show.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+    <link rel="stylesheet" href="/stylesheets/stars.css">
 
     <div class="row">
         <div class="col-6">
@@ -38,11 +39,24 @@
                 <h2>Leave a Comment</h2>
                 <form action="/reviews/<%= review._id %>/comments" method="POST" class="mb-3 validated-form" novalidate>
                     <div class="mb-3">
-                        <label class="form-label" for="rating">Rating</label>
-                        <input class="form-range" type="range" min="1" max="5" name="comment[rating]" id="rating">
+                        <fieldset class="starability-basic">
+                            <legend>Rating:</legend>
+                            <input type="radio" id="no-rate" class="input-no-rate" name="comment[rating]" value="1"
+                                checked aria-label="No rating." />
+                            <input type="radio" id="first-rate1" name="comment[rating]" value="1" />
+                            <label for="first-rate1" title="Terrible">1 star</label>
+                            <input type="radio" id="first-rate2" name="comment[rating]" value="2" />
+                            <label for="first-rate2" title="Not good">2 stars</label>
+                            <input type="radio" id="first-rate3" name="comment[rating]" value="3" />
+                            <label for="first-rate3" title="Average">3 stars</label>
+                            <input type="radio" id="first-rate4" name="comment[rating]" value="4" />
+                            <label for="first-rate4" title="Very good">4 stars</label>
+                            <input type="radio" id="first-rate5" name="comment[rating]" value="5" />
+                            <label for="first-rate5" title="Amazing">5 stars</label>
+                        </fieldset>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label" for="body">Comment</label>
+                        <label class="form-label" for="body">Comment Text</label>
                         <textarea class="form-control" name="comment[body]" id="body" cols="30" rows="3"
                             required></textarea>
                         <div class="valid-feedback">
@@ -55,10 +69,12 @@
                     <% for(let comment of review.comments) { %>
                         <div class="card mb-3">
                             <div class="card-body">
-                                <h5 class="card-title">Rating: <%= comment.rating %>
+                                <h5 class="card-title">
+                                    <%= comment.author.username %>
                                 </h5>
-                                <h6 class="card-subtitle mb-2 text-muted">By <%= comment.author.username %>
-                                </h6>
+                                <p class="starability-result" data-rating="<%= comment.rating %>">
+                                    Rated: <%= comment.rating %> stars
+                                </p>
                                 <p class="card-text">Comment: <%= comment.body %>
                                 </p>
                                 <% if(currentUser && comment.author.equals(currentUser._id)) { %>
