--- a/views/reviews/show.ejs
+++ b/views/reviews/show.ejs
@@ -3,39 +3,58 @@
 
     <div class="row">
         <div class="col-6">
-            <div class="card mb-3">
-                <% for(let img of review.images) { %>
-                    <img src="<%= img.url %>" class="card-img-top" alt="...">
-                    <% } %>
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <%= review.title %>
-                            </h5>
-                            <p class="card-text">
-                                <%= review.description %>
-                            </p>
+            <div id="reviewCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <% review.images.forEach((img, i)=> { %>
+                        <div class="carousel-item <%= i===0 ? " active" : "" %> ">
+                            <img src="<%= img.url %>" class="d-block w-100" alt="">
                         </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item text-muted">
-                                <%= review.location %>
-                            </li>
-                            <li class="list-group-item">Submitted by
-                                <%= review.author.username %>
-                            </li>
-                        </ul>
-                        <% if(currentUser && review.author.equals(currentUser._id)) { %>
-                            <div class="card-body">
-                                <a class="card-link btn btn-info" href="/reviews/<%= review._id %>/edit ">Edit</a>
-                                <form class="d-inline" action="/reviews/<%= review._id %>?_method=DELETE" method="POST">
-                                    <button class="btn btn-danger">Delete</button>
-                                </form>
-                            </div>
-                            <% } %>
-                                <div class="card-footer text-muted">
-                                    2 days ago
-                                </div>
+                        <% }) %>
+                </div>
+                <% if(review.images.length> 1) { %>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#reviewCarousel"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#reviewCarousel"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                    <% } %>
+            </div>
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <%= review.title %>
+                    </h5>
+                    <p class="card-text">
+                        <%= review.description %>
+                    </p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item text-muted">
+                        <%= review.location %>
+                    </li>
+                    <li class="list-group-item">Submitted by
+                        <%= review.author.username %>
+                    </li>
+                </ul>
+                <% if(currentUser && review.author.equals(currentUser._id)) { %>
+                    <div class="card-body">
+                        <a class="card-link btn btn-info" href="/reviews/<%= review._id %>/edit ">Edit</a>
+                        <form class="d-inline" action="/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                            <button class="btn btn-danger">Delete</button>
+                        </form>
+                    </div>
+                    <% } %>
+                        <div class="card-footer text-muted">
+                            2 days ago
+                        </div>
             </div>
         </div>
+
         <div class="col-6">
             <% if(currentUser) { %>
                 <h2>Leave a Comment</h2>
