--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -2,7 +2,7 @@
     <div class="row">
         <h1 class="text-center">Edit Review</h1>
         <div class="col-6 offset-3">
-            <form action="/reviews/<%= review._id %>?_method=PUT " method="POST" novalidate class="validated-form">
+            <form action="/reviews/<%= review._id %>?_method=PUT " method="POST" novalidate class="validated-form" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
                     <input class="form-control" type="text" id="title" name="review[title]" value="<%= review.title %>"
@@ -20,12 +20,8 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label class="form-label" for="image">Image Url</label>
-                    <input class="form-control" type="text" id="image" name="review[image]" value="<%= review.image %>"
-                        required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
+                    <label class="form-label" for="image">Add Images</label>
+                    <input type="file" name="image" id="image" multiple>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
