--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -20,8 +20,8 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label class="form-label" for="image">Add Images</label>
-                    <input type="file" name="image" id="image" multiple>
+                    <label for="image" class="form-label">Add images</label>
+                    <input class="form-control" type="file" id="image" name="image" multiple>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
