--- a/views/reviews/new.ejs
+++ b/views/reviews/new.ejs
@@ -17,14 +17,10 @@
                         Looks good!
                     </div>
                 </div>
-                <input type="file" name="image" id="" multiple>
-                <!-- <div class="mb-3">
-                    <label class="form-label" for="image">Image Url</label>
-                    <input class="form-control" type="text" id="image" name="review[image]" required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
-                </div> -->
+                <div class="mb-3">
+                    <label for="image" class="form-label">Upload images</label>
+                    <input class="form-control" type="file" id="image" name="image" multiple>
+                </div>
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
                     <textarea class="form-control" type="text" id="description" name="review[description]"
