centering map on review

--- a/views/reviews/show.ejs
+++ b/views/reviews/show.ejs
@@ -113,5 +113,6 @@
 
     <script>
         const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+        const reviewGeometry = <%- review.geometry %>
     </script>
     <script src="/javascripts/showPageMap.js"></script>
