--- a/views/reviews/index.ejs
+++ b/views/reviews/index.ejs
@@ -1,25 +1,35 @@
 <% layout('layouts/boilerplate') %>
-<h1>All reviews</h1>
-<div>
-    <a href="/reviews/new">Add Review</a>
-</div>
+    <h1>All reviews</h1>
+    <div>
+        <a href="/reviews/new">Add Review</a>
+    </div>
 
-<% for (let review of reviews) { %>
-    <div class="card mb-3">
-        <div class="row">
-            <div class="col-md-4">
-                <img class="img-fluid" alt="" src="<%= review.images[0].url %> ">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h5 class="card-title"><%= review.title %></h5>
-                    <p class="card-text"><%= review.description %></p>
-                    <p class="card-text">
-                        <small class="text-muted"><%= review.location %></small>
-                    </p>
-                    <a class="btn btn-primary" href="/reviews/<%= review._id %> ">View <%= review.title %> </a>
+    <% for (let review of reviews) { %>
+        <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <% if(review.images.length) { %>
+                        <img class="img-fluid" alt="" src="<%= review.images[0].url %> ">
+                        <% } else { %>
+                            <img class="img-fluid" alt="" src="https://res.cloudinary.com/sahabiswajit600/image/upload/v1660535215/WriteReviews/wxpzhgibovjb47d5socx.jpg">
+                            <% } %>
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%= review.title %>
+                        </h5>
+                        <p class="card-text">
+                            <%= review.description %>
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                <%= review.location %>
+                            </small>
+                        </p>
+                        <a class="btn btn-primary" href="/reviews/<%= review._id %> ">View <%= review.title %> </a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-<% } %>
+        <% } %>
