--- a/views/reviews/index.ejs
+++ b/views/reviews/index.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+    <div id="map" style="width: 100%; height: 500px"></div>
     <h1>All reviews</h1>
     <div>
         <a href="/reviews/new">Add Review</a>
@@ -11,7 +12,8 @@
                     <% if(review.images.length) { %>
                         <img class="img-fluid" alt="" src="<%= review.images[0].url %> ">
                         <% } else { %>
-                            <img class="img-fluid" alt="" src="https://res.cloudinary.com/sahabiswajit600/image/upload/v1660535215/WriteReviews/wxpzhgibovjb47d5socx.jpg">
+                            <img class="img-fluid" alt=""
+                                src="https://res.cloudinary.com/sahabiswajit600/image/upload/v1660535215/WriteReviews/wxpzhgibovjb47d5socx.jpg">
                             <% } %>
                 </div>
                 <div class="col-md-8">
@@ -33,3 +35,9 @@
             </div>
         </div>
         <% } %>
+
+            <script>
+                const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+            </script>
+
+            <script src="/javascripts/clusterMap.js"></script>
