--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -2,7 +2,8 @@
     <div class="row">
         <h1 class="text-center">Edit Review</h1>
         <div class="col-6 offset-3">
-            <form action="/reviews/<%= review._id %>?_method=PUT " method="POST" novalidate class="validated-form" enctype="multipart/form-data">
+            <form action="/reviews/<%= review._id %>?_method=PUT " method="POST" novalidate class="validated-form"
+                enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
                     <input class="form-control" type="text" id="title" name="review[title]" value="<%= review.title %>"
@@ -32,13 +33,14 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                    <% review.images.forEach(function(img, i) {  %> 
+                    <% review.images.forEach(function(img, i) { %>
                         <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="">
                         <div class="form-check-inline">
-                            <input type="checkbox" id="image-<%= i %>" name="deleteImages[]" value="<%= img.filename %>">
+                            <input type="checkbox" id="image-<%= i %>" name="deleteImages[]"
+                                value="<%= img.filename %>">
                         </div>
                         <label for="image-<%= i %>">Delete</label>
-                        <% }) %> 
+                        <% }) %>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-info">Update Review</button>
