--- a/views/reviews/show.ejs
+++ b/views/reviews/show.ejs
@@ -3,7 +3,6 @@
 
     <div class="row">
         <div class="col-6">
-            <div id='map' style='width: 400px; height: 300px;'></div>
             <div id="reviewCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <% review.images.forEach((img, i)=> { %>
@@ -57,6 +56,7 @@
         </div>
 
         <div class="col-6">
+            <div id='map'></div>
             <% if(currentUser) { %>
                 <h2>Leave a Comment</h2>
                 <form action="/reviews/<%= review._id %>/comments" method="POST" class="mb-3 validated-form" novalidate>
